world/text wrap fixes

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -308,3 +308,11 @@ body {
 .block {
     display: block;
 }
+.detail-sources {
+    text-overflow: ellipsis;
+    overflow: hidden;
+    word-wrap: break-word;
+}
+.modal {
+    word-wrap: break-word;
+}
